# fantasy-engine

./: .gitignore  ffa_season_projections_2025.csv  mock_draft.py  pyproject.toml  run_draft.py  scrape.R
src/fantasy/: draft_engine.py  marginal_value.py  models.py  opponent_behavior.py  scoring.py
tests/: test_calc_pts.py  test_data.py
